maze.lessons.maze.island.IslandMaze.scala.error
Escaper:6: error: too many arguments for method keepHandOnSideWall: ()Unit
  keepHandOnSideWall(2)
                    ^