maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
  while (!estFaceMur()){
    avance()
  }
  keepHandOnSideWall(2)
  while (!estFaceMur()){
    avance()
  }
  while (!estSurBiscuit()){
    keepHandOnSideWall()
  }
  prendBiscuit()
  
}

def keepHandOnSideWall(){
  gauche()
  if (!estFaceMur()){
    avance()
  } else {
    while(estFaceMur()){
      droite()
    }
    avance()
  }
}